fix bug with calculating collision between objects